@@ -567,15 +567,6 @@
     </version>
   </module>
   <module name="gedit-plugins">
-    <version release="gnome-2.4">
-      <component name="gedit-plugins" dir="gedit-plugins" group="extras">
-        <podir dir="po"/>
-        <potname name="gedit-plugins-2.4.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
     <version release="gnome-2.6">
       <component name="gedit-plugins" dir="gedit-plugins" group="extras">
         <podir dir="po"/>
