@@ -1,3 +1,8 @@
+2003-10-03  Carlos Perelló Marín <carlos@gnome.org>
+
+	* translation-status.xml: Removed gedit-plugins from gnome-2.4, I
+	think that's the problem with the segfault.
+
 2003-10-03  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gcalctool has been branched
